assets/css/style.scss
---
---

@import "minima";

body{
  background-color: #f9f8f5;
}

.logo{
  width: 30px;
  height: 30px;
  float:left;
  margin-top:13px;
  margin-left: 10px;
}

blockquote {
    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
    margin-left: 40px;
    margin-right: 40px;
    border: none;
    text-align: center;
    font-size: 17px;
    color: #E08BA2;
}

.card-link{
  color: #2199ab;
}

.link-inside-post{
  color: #2199ab;
}

.link-inside-post:hover{
  color: #8DD871 !important;
}

.link-inside-post:visited{
  color: #2199ab;
}


.site-header {
  border-top: 3px solid #187381;
  border-bottom: 1px solid #e8e8e8;
  min-height: 55.95px;
  position: relative; }

.card-wrapper{
  // margin-right:0px;
  // width:10px;
  margin: 0 auto;
}

.card {
    /* Add shadows to create the "card" effect */
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    width:210px;
    height:150px;
    padding-top: 10px;
    padding-bottom: 5px;
    padding-left: 10px;
    margin-right: 20px;
    float:left !important;
    border-color: #30C2D7;
    border-width: 2px;
    border-style: solid;
}

/* On mouse-over, add a deeper shadow */
.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
}

.card:hover h3{
  color: #8DD871;
}

.post-footer{
  font-size: 25px;
  margin-left: 40%;
}
/* Add some padding inside the card container */
// .container {
//   padding-top: 10px;
//   padding-left: 30px;
// }


footer{
  background-color: #E08BA2;
  color: #fafafa;
}

.site-footer {
  border-top: 1px solid #e8e8e8;
  padding-top: 20px;
  padding-bottom: 10px;
  padding-left: 0px;
  padding-right: 0px;
}

footer a{
  color: #fafafa;
}

.footer-col-wrapper{
  color:#fafafa;
  text-align: center !important;
}

footer a:hover{
  color: #8DD871;
}

.footer-col-wrapper a{
  color:#fafafa;
}

.footer-col a{
  padding-right: 15px;
}

.footer-col {
  display: inline-block;
  width: 100%;
}

.svg-icon {
  fill: white;
  color: white;
 }

.svg-icon:hover{
  fill: #8DD871;
}

.profile-pic {
    border-radius: 50%;
    height: 300px;
    width: 300px;
    float:right;
}

.imposter-contain{
  text-align: center;
}

.text-block{
   float: left;
   width: 50%;
}

.email-icon {
  padding-right: 5px;
}

// grid-container{
//   display: grid;
//   grid-template-columns: auto auto auto;
//   grid-gap: 10px;
// }

@media only screen and (max-width: 630px) {
  .profile-pic {
      border-radius: 50%;
      height: 100px;
      width: 100px;
      float:right;
  }
  .text-block{
    float: left;
    width: 70%;
  }
  .recent-posts{
    text-align: center;
  }
  .post-link{
    display: inline-block;
    text-align: left;
  }
  .card-wrapper{
    display: inline-block;
  }
}

@media only screen and (max-width: 800px) {
  .footer-col {
    float: none;
    width: -webkit-calc(100% - (30px / 2));
    width: calc(100% - (30px / 2)); }
}

/*8DD871
30C2D7
E08BA2
EF3462*/

